# daa-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  config.yaml  pyproject.toml  render.yaml  requirements.txt
src/: checker_endpoint.py  checker_playwright.py  config.py  main.py  notifier_email.py  parser.py  scheduler.py  store.py  util.py
tests/: test_parser.py
